   more obvious the capability provided.  Along with this is the renaming of classes to
   easy to digest names, such as ThreadPeriodicTask to PeriodicTask to avoid overloading
   of names.

-- Renamed subdirectory 'nethandlers' to 'network' as this better conveys the code it
   contains - namely, component interfaces to network sockets. Also moved NetHandler
   class into this directory.

   Object class
     -- In Object, the method getSlotByIndex() has been removed.  Therefore any derived
        Object-based classes no longer need to define it.  For legacy code, methods of
        the form below (in all class definitions), should be deleted.

        base::Object* <<CLASSNAME>>::getSlotByIndex(const int si)
        {
           return BaseClass::getSlotByIndex(si);
        }

        This change simplifies the codebase by eliminating unused methods and
        reducing code clutter.

     -- Extracted '_Static' structure (i.e., struct) from Object and moved into a
        standalone class called MetaObject - which is, what it is.  Updated
        Object to use this object (via, a variable called 'metaObject')
        in lue of '_static' to store class and object related information.  This has
        NO impact on API, but does improve code readable.

     -- Removed both registerClass() and WriteClassList() methods and underlying
        support structure to maintain a list of classes compiled into an application.
        This was used so that a developer could print a list of classes
        available within an application and metadata related to them,
        such as the number of instances currently in existance.

        In theory, this information could be used to help debug memory leaks within
        a running application. Not only can this capability be replicated outside of
        Object itself, other tools exist (e.g., Valgrind) which are much more
        comprehensive for this purpose. Removing the code associated with this functionality