@@ -1,9 +1,9 @@
 
 #include "openeaagles/iodevice/DiscreteOutput.hpp"
 
-#include "openeaagles/base/IoData.hpp"
-#include "openeaagles/base/IoDevice.hpp"
-#include "openeaagles/base/IoHandler.hpp"
+#include "openeaagles/base/io/IoData.hpp"
+#include "openeaagles/base/io/IoDevice.hpp"
+#include "openeaagles/base/io/IoHandler.hpp"
 #include "openeaagles/base/Number.hpp"
 #include <iostream>
 
